# hermes

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  RAMSIS_Set-Up.md  README.md  README.txt  Repo_guide.md  Vagrantfile  alembic.ini  bootstrap.sh  compose-database.yaml  compose-prefect.yaml  compose.yaml  concepts.md  forecastseries.json  inj_plan_writer.py  prefect.toml  project.json  pyproject.toml  required_endpoints.txt  requirements-ci.txt  requirements-docker.txt  requirements-py36-linux64-ssh.txt  requirements-py36-linux64.txt  requirements-web.txt  requirements.txt  run.py  serve.py  setup.py  supervisord.conf  tox.ini  (+1 more)
.github/workflows/: _tests.yml  image.yml  publish.yml  tests.yml
.gitlab/issue_templates/: feature.md
1_basic_code/: HAZ_makeSwissBackgroundHazGrid_banu.m  calc_rates_magbins2.m  call_loss.m  com.mat  com_back.mat  fct_GMPE_ECOS_02.m  fct_mean_damage_degree_calib_Allen.m
2_additional_codes/Data_Import/: readme.txt
2_additional_codes/ISRA_Yverdon/: HAZ_makeSwissBackgroundHazGrid_banu.m  calc_loss.m  fct_mean_damage_degree_standard.m
2_additional_codes/ISRA_traffic_lightsystem_template/: call_loss_TrafficLight.m  fct_GMPE_Allen2012.m  fct_GMPE_ECOS_09.m  fct_damage_grade_distribution_beta.m
RAMSIS/: application.py  config.py  db.py  db_utils.py  error.py  main.py  ramsis.py  ramsissettings.py  schedule.py  settings.template.yml  stage_manager.py  utils.py  wkt_utils.py
RAMSIS/app/: client.py  import-hyd.py  import-seismics.py
RAMSIS/cli/: __init__.py  engine.py  forecast.py  forecastseries.py  model.py  project.py  ramsis.py  tags.py  utils.py
RAMSIS/clients/: datasources.py  sfm.py
RAMSIS/core/: __init__.py  builder.py  controller.py  datasources.py  reset_stages.py  simulator.py  store.py  taskmanager.py  wallclock.py
RAMSIS/flows/: __init__.py  forecast.py  hazard.py  manager.py  register.py  scheduled_manager.py  seismicity.py  state_handler.py
RAMSIS/io/: __init__.py  hydraulics.py  oq_hazard.py  resource.py  seismics.py  sfm.py  utils.py
RAMSIS/tasks/: .manager.py.swo  forecast.py  hazard.py  manager.py  seismicity_forecast.py  utils.py
RAMSIS/test/: testeventhistory.py  testfdsnwsrunner.py  testimporter.py  testproject.py  testseismicevent.py  testseismiceventhistory.py  testsimulator.py
RAMSIS/tests/: conftest.py  docker-compose.yml  recreate_test_db.py  test_forge_2_models_induced_seismicity_case.py  test_forge_induced_seismicity_case.py  test_induced_hazard_case.py  test_induced_seismicity_case.py  test_natural_seismicity_case.py  test_natural_seismicity_case_OEF.py  test_setup.py  utils.py
RAMSIS/ui/: __init__.py  dialog.py  (+9 more)
alembic/: env.py
api/: Makefile
atlas/: atlas.py  atlascore.py  atlasengine.py  atlassettings.py  catalog.sqlite  data.sqlite  effectestimator.py  eqstats.py  forecastengine.py  ishamodelcontrol.py  main.py  main.py.profile  simulator.py  tools.py
atls/: __init__.py  atls.ini  atls.py  atlscore.py  atlsjob.py  atlssettings.py  basel.atl  engine.py  eqstats.py  forecastengine.py  geometry.py  hazardrisk.py  isforecaster.py  ishamodelcontrol.py  job.py  main.py  modelvalidation.py  resultprocessor.py  simulation.profile  simulator.py  tasks.py  tools.py
config/: __init__.py  config.py  gunicorn.py  ramsis_config.yml  ramsis_config_public.yml
doc/: Makefile  code.rst  conf.py  core.rst  engine.rst  index.rst  overview.rst  project.rst  uml.rst
docs/: concepts.md  injectionplan.md  prefect_configs.txt
examples/: add_seismicity_models.py  basel.db  create_project.py  inj_plan_writer.py  reset_seismicity_model_run_statuses.py  reset_statuses.py
forge_2022/: 16A-32_forge_2022_04_21.json  16A-32_forge_2022_04_21_full.json  config.json  config_two_models.json  config_two_plans.json  forecast_forge_2022.json  model_forge_2022.json  model_forge_2022_bayes.json  plan_150Lm-200Lm.json  plan_150Lm.json  plan_200Lm.json  project_forge_2022.json  project_forge_2022_two_plans.json
forge_2024/: double  forecast_forge_2024.json  forecast_stage_10.json  forecast_stage_10_dynamic.json  forecast_stage_5.json  forecast_stage_6.json  forecast_stage_7.json  forecast_stage_8.json  forecast_stage_9.json  half  planned  project_forge_2024.json  shut-in
hermes/: config.py  db.py  db_utils.py  error.py
prefect/: config.toml
ramsis/: basel.db  eqstats.py  eventimporter.py  hydws.py  hydwscatalogimporter.py  main.py  obspycatalogimporter.py  ramsis.ini  ramsis.py  ramsissettings.py  simulator.py  tools.py  worker.py
ramsisdata/: setup.py
rise/: setup_rise.sh
scripts/: run.sh  script_populate.py
src/: ramsis.py  worker.py
test/: test.py
tests/: test_store.py
vm/: Vagrantfile  bootstrap.sh
web/: README.md  crud.py  database.py  index.sql  main.py  mixins.py  queries.sql  schemas.py
(+1098 files in other folders)
