[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["hermes.*", "config"]

[project]
name = "HERMES"
version = "0.1.0"
description = "Hub for Earthquake foRecasts ManagEment and Scheduling "
readme = "README.md"
authors = [
    { name = "Laura Sarson" },
    { name = "Nicolas Schmid", email = "nicolas.schmid@sed.ethz.ch" },
]
license = { file = "LICENSE" }

dependencies = [
    "geoalchemy2",
    "hermes-model @ git+https://gitlab.seismo.ethz.ch/indu/ramsis-model.git",
    "prefect>=3.0.0rc16",
    "psycopg2",
    "pydantic",
    "python-dotenv",
    "requests",
    "seismostats @ git+https://github.com/swiss-seismological-service/SeismoStats.git",
    "sqlalchemy",
    "typer",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pyarrow", "isort", "pytest-cov", "tox", "flake8"]

[project.scripts]
hermes = "hermes.cli:app"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore:divide by zero"]
