[build-system]
requires = ["setuptools>=80", "wheel>=0.45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]
exclude = ["web"]

[project]
name = "rt-hermes"
dynamic = ["version"]
description = "RealTime Hub for Earthquake foRecasts ManagEment and Scheduling "
readme = "README.md"
authors = [{ name = "Laura Sarson" }, { name = "Nicolas Schmid" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "alembic-utils",
    "alembic",
    "geoalchemy2",
    "hermes-model",
    "hydws-client",
    "pandas",
    "prefect==3.3.5",
    "psycopg2",
    "pydantic-settings",
    "pydantic",
    "python-dotenv",
    "requests",
    "seismostats",
    "shapely",
    "sqlalchemy",
    "typer",
]

requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "isort",
    "pyarrow",
    "pytest-cov",
    "pytest",
    "setuptools-scm",
    "tox",
    "twine",
]

[project.scripts]
hermes = "hermes.cli:app"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore:divide by zero"]
